# GeneradorPlanesElectivas

./: CMakeLists.txt  Horario.cpp  Horario.h  Materia.cpp  Materia.h  README.md  diasElectivas.cpp
